fixed image stretcher bug where stretched images were not being removed after closing; changed max size to size of stretcher window

--- a/app/inst/www/styles/default.css
+++ b/app/inst/www/styles/default.css
@@ -573,8 +573,9 @@
   z-index: 9999;
   width: 100%;
   height: 100%;
-  background-color: rgba(127, 127, 127, 0.99);
-  overflow: hidden; }
+  background-color: rgba(255, 255, 255, 0.99);
+  overflow: hidden;
+  top: 0; }
   #rcap-viewer #rcap-stretcher .stretcher-close {
     position: absolute;
     top: 10px;
