--- a/app/inst/www/styles/gridstack/overrides.scss
+++ b/app/inst/www/styles/gridstack/overrides.scss
@@ -162,8 +162,9 @@
         z-index: 9999;
         width: 100%;
         height: 100%;
-        background-color: rgba(127, 127, 127, 0.99);
+        background-color: rgba(255, 255, 255, 0.99);
         overflow: hidden;
+        top: 0;
         & .stretcher-close {
             position: absolute;
             top: 10px;
